--- a/locale/en.yml
+++ b/locale/en.yml
@@ -1,7 +1,7 @@
 flarum-ext-bbcode-5star-rating:
   forum:
     button:
-      tooltip: 5 Star Rating
+      tooltip: select 5 Star Rating
       label: 5 Star Rating
 
     modal:
